--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel='stylesheet' href="./stylesheet/common.css">
     <link rel='stylesheet' href="./stylesheet/index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" defer></script>
+    <script src="./js/index.js" defer></script>
 </head>
 
 <body>
@@ -85,7 +86,7 @@
     </div>
 </body>
 
-<script src="./js/index.js"></script>
+
 
 
 </html>
